# proven

./: .echidnabot.toml  .editorconfig  .gitattributes  .gitignore  .hypatia-baseline.json  .hypatia-ignore  .trusted-base-ignore  0-AI-MANIFEST.a2ml  A2ML-ALIB-INTEGRATION-PLAN-2026-01-30.md  AI.a2ml  ARCHITECTURE-CLEANUP-2026-01-25.md  ARCHITECTURE-ROOT-CAUSE-ANALYSIS-2026-01-30.md  BINDING-COMPLETENESS-AUDIT-2026-01-30.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  CONTRIBUTING.md  Containerfile  Dockerfile  ECOSYSTEM.scm  EMERGENCY-CLEANUP-COMPLETE-2026-01-25.md  EXPLAINME.adoc  FFI-ARCHITECTURE-AUDIT-2026-01-30.md  HARDENING-RULES.adoc  Justfile  LICENSE  MAINTAINERS.adoc  META.scm  MODULE-STATUS-RAW.txt  MODULE-STATUS.txt  NOTICE  PROJECT-ISSUES.md  PROOF-NEEDS.md  PROVEN-COMPREHENSIVE-ANALYSIS-2026-01-30.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.adoc.invariants.md  ROADMAP.adoc  (+31 more)
.UNSAFE-RUST-DELETED-20260125/: safe_buffer.rs  safe_calculator.rs  safe_checksum.rs  safe_circuit_breaker.rs  safe_color.rs  safe_content_type.rs  safe_cookie.rs  safe_crypto.rs  safe_currency.rs  safe_datetime.rs  safe_float.rs  safe_geo.rs  safe_graph.rs  safe_json.rs  safe_ml.rs  safe_network.rs  safe_probability.rs  safe_queue.rs  safe_string.rs  safe_tensor.rs  safe_url.rs  safe_uuid.rs
.bot_directives/: README.scm  echidnabot.scm  finishbot.scm  glambot.scm  proven-overrides.scm  rhodibot.scm  robot-repo-automaton.scm  seambot.scm  sustainabot.scm
.claude/: CLAUDE.md  settings.json
.clusterfuzzlite/: Containerfile  Dockerfile  build.sh  project.yaml
.devcontainer/: devcontainer.json  post-create.sh
.echidnabot/: EMERGENCY-CLEANUP.sh  proven-cleaner.sh
.github/: CICD-CHANGES-2026-06-04.md  CODEOWNERS  dependabot.yml  settings.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.a2ml  META.scm  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.well-known/: ai.txt  humans.txt  security.txt
audits/: assail-classifications.a2ml  audit-ffi-bindings-2026-05-26.md  audit-track-c-2026-06-23.md  chapel-symbol-audit-2026-05-30.md
benchmarks/: Main.idr  README.adoc  README.md  SafeCryptoBench.idr  SafeJsonBench.idr  SafeMathBench.idr  SafeNetworkBench.idr  SafeStringBench.idr  benchmarks.ipkg
bindings/cpp/: CMakeLists.txt  README.adoc  README.md
bindings/cpp/include/proven/: common.hpp  ffi.hpp  proven.hpp  safe_angle.hpp  safe_color.hpp  safe_crypto.hpp  safe_currency.hpp  safe_datetime.hpp  safe_email.hpp  safe_float.hpp  safe_hex.hpp  safe_json.hpp  safe_math.hpp  safe_network.hpp  safe_path.hpp  safe_phone.hpp  safe_string.hpp  safe_unit.hpp  safe_url.hpp  safe_uuid.hpp  safe_version.hpp
bindings/elixir/native/proven_nif/: Cargo.toml  build.rs
bindings/elixir/native/proven_nif/src/: lib.rs
bindings/ephapax-affine/: Cargo.toml  README.adoc  README.md
bindings/ephapax-affine/src/: ffi.rs  lib.rs  safe_crypto.rs  safe_email.rs  safe_json.rs  safe_math.rs  safe_string.rs  safe_url.rs
bindings/ephapax-linear/: Cargo.toml
bindings/ephapax-linear/src/: ffi.rs  lib.rs  safe_math.rs  safe_string.rs
bindings/haskell/: proven.cabal
bindings/haskell/src/: Proven.hs
bindings/haskell/src/Proven/: Core.hs  FFI.hs  SafeAngle.hs  SafeCalculator.hs  SafeChecksum.hs  SafeColor.hs  SafeContentType.hs  SafeCookie.hs  SafeCrypto.hs  SafeCurrency.hs  SafeDateTime.hs  SafeEmail.hs  SafeFloat.hs  SafeGeo.hs  SafeHeader.hs  SafeHex.hs  SafeJson.hs  SafeML.hs  SafeMath.hs  SafeNetwork.hs  SafePassword.hs  SafePath.hs  SafePhone.hs  SafeProbability.hs  SafeRetry.hs  SafeString.hs  SafeUUID.hs  SafeUnit.hs  SafeUrl.hs  SafeVersion.hs
bindings/haskell/src/Proven/FFI/: Types.hs
bindings/haskell/test/: Spec.hs
bindings/hy/: README.adoc  README.md  pyproject.toml
bindings/hy/proven/: __init__.hy  ffi.hy  safe_crypto.hy  safe_email.hy  safe_json.hy  safe_math.hy  safe_path.hy  safe_string.hy  safe_url.hy
bindings/ocaml/: Justfile  dune-project  symbol-manifest.txt
bindings/ocaml/lib/: dune  proven.ml  proven_ffi.ml  safe_angle.ml  safe_buffer.ml  safe_color.ml  safe_crypto.ml  safe_currency.ml  safe_datetime.ml  safe_email.ml  safe_float.ml  safe_hex.ml  safe_json.ml  safe_math.ml  safe_network.ml  safe_path.ml  safe_phone.ml  safe_string.ml  safe_unit.ml  safe_url.ml  safe_uuid.ml  safe_version.ml
bindings/ocaml/smoke/: hello_smoke.ml
bindings/ocaml/test/: dune  test_proven.ml
bindings/rust/: Cargo.toml  README.adoc  README.md  build.rs
bindings/rust/benches/: benchmarks.rs  safe_math.rs
bindings/rust/fuzz/: Cargo.toml  README.adoc
bindings/rust/fuzz/fuzz_targets/: safe_email_is_valid.rs  safe_json_is_valid.rs  safe_path_has_traversal.rs  safe_url_parse.rs
bindings/rust/src/: callbacks.rs  core.rs  ffi.rs  lib.rs  lifecycle.rs  safe_angle.rs  safe_bloom.rs  safe_buffer.rs  safe_calculator.rs  safe_checksum.rs  safe_circuit_breaker.rs  safe_color.rs  safe_content_type.rs  safe_cookie.rs  safe_crypto.rs  safe_currency.rs  safe_datetime.rs  safe_digest.rs  safe_email.rs  safe_float.rs  safe_geo.rs  safe_graph.rs  safe_header.rs  safe_hex.rs  safe_http.rs  safe_json.rs  safe_lru.rs  safe_math.rs  safe_ml.rs  safe_monotonic.rs  safe_network.rs  safe_password.rs  safe_path.rs  safe_phone.rs  safe_probability.rs  safe_queue.rs  safe_rate_limiter.rs  safe_registry.rs  safe_retry.rs  safe_state_machine.rs  (+7 more)
bindings/rust/src/tests/: aspect.rs  e2e.rs  mod.rs  p2p.rs
bindings/vala/: README.adoc  README.md  meson.build
bindings/vala/src/: SafeCrypto.vala  SafeDateTime.vala  SafeEmail.vala  SafeJson.vala  SafeMath.vala  SafeNetwork.vala  SafePath.vala  SafeString.vala  SafeUrl.vala  lib_proven.vapi
contractiles/: README.adoc
docs/: ADOPTION-FLOWCHART.md  API.md  (+15 more)
domain-specific/tui/: Cargo.toml  README.adoc
domain-specific/tui/src/: app.rs  event.rs  main.rs
domain-specific/tui/src/safety/: calculator.rs  mod.rs
domain-specific/tui/src/ui/: about.rs  bounded.rs  home.rs  mod.rs  safe_math.rs  validation.rs
(+2936 files in other folders)
