(lang dune 3.0)

; SPDX-License-Identifier: Apache-2.0
; SPDX-FileCopyrightText: 2025 Hyperpolymath
(name proven)
(version 0.9.1)

(generate_opam_files true)

(source (github hyperpolymath/proven))
(license Apache-2.0)
(authors "Hyperpolymath")
(maintainers "hyperpolymath")

(package
 (name proven)
 (synopsis "Formally verified safety primitives for OCaml")
 (description "Safe operations with bounds checking, overflow detection, and security-focused string handling.")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (alcotest :with-test)))
