(lang dune 3.0)

; SPDX-License-Identifier: PMPL-1.0-or-later
; SPDX-FileCopyrightText: 2025 Hyperpolymath
(name proven)
(version 0.9.1)

(generate_opam_files true)

(source (github hyperpolymath/proven))
(license PMPL-1.0-or-later)
(authors "Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>")
(maintainers "Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>")

(package
 (name proven)
 (synopsis "Formally verified safety primitives for OCaml")
 (description "Safe operations with bounds checking, overflow detection, and security-focused string handling.")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  (alcotest :with-test)))
