# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "proven"
version = "1.0.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "Proven - Formally verified safety library FFI bindings for Rust"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/proven"
documentation = "https://docs.rs/proven"
readme = "README.md"
keywords = ["safety", "verification", "ffi", "formal-methods"]
categories = ["api-bindings", "development-tools"]
links = "proven"

[lib]
name = "proven"
crate-type = ["lib"]

[build-dependencies]
# None needed - build.rs handles link search paths

[dependencies]
# No dependencies - pure FFI wrapper over libproven

[dev-dependencies]
# Tests require libproven to be built and available
