# SPDX-License-Identifier: PMPL-1.0-or-later
# Copyright (c) 2026 Jonathan D.A. Jewell (hyperpolymath) <jonathan.jewell@open.ac.uk>

[package]
name = "proven_nif"
version = "0.10.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
description = "Rustler NIF bindings for Proven safety library — thin FFI wrapper over libproven"
license = "PMPL-1.0"
publish = false

[lib]
name = "proven_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35"

[build-dependencies]

[profile.release]
lto = true
opt-level = 3
